fix bad align in new-group

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -115,6 +115,9 @@ select {
 
 label {
     padding: 0 0.5em 0 0;
+    display: inline-block;
+    width: 3em;
+    text-align: right;
 }
 
 .message {
